RESOLVED FIXED 103531
[EFL] MiniBrowser does not play Infinite Gangnam Style
https://bugs.webkit.org/show_bug.cgi?id=103531
Summary [EFL] MiniBrowser does not play Infinite Gangnam Style
Dominik Röttsches (drott)
Reported 2012-11-28 09:17:51 PST
http://static.echonest.com/InfiniteGangnamStyle/ is not supported on MiniBrowser due to missing WebAudio support.
Attachments
Patch (10.18 KB, patch)
2012-12-19 08:21 PST, Dominik Röttsches (drott)
no flags
Patch (10.33 KB, patch)
2012-12-20 06:02 PST, Dominik Röttsches (drott)
no flags
Philippe Normand
Comment 1 2012-11-30 11:35:26 PST
There is a GStreamer WebAudio backend, I thought EFL was using it. Is it enabled?
Dominik Röttsches (drott)
Comment 2 2012-12-03 01:14:35 PST
(In reply to comment #1) > There is a GStreamer WebAudio backend, I thought EFL was using it. Is it enabled? Will doublecheck, currently the page says WebAudio isn't there, but not sure if it's a navigator-check or really testing for WebAudio.
Philippe Normand
Comment 3 2012-12-03 03:50:07 PST
You need to enable it at build and runtime (websetting). That website likely checks if the UA can create an audio context or not.
Philippe Normand
Comment 4 2012-12-10 08:41:51 PST
Well this works fine in GTK if you enable WebAudio at build and runtime :)
Dominik Röttsches (drott)
Comment 5 2012-12-10 08:46:30 PST
(In reply to comment #4) > Well this works fine in GTK if you enable WebAudio at build and runtime :) Okay, thanks for checking ;-) I'll hopefully get around to enabling it soon so that we can have some atmosphere in the office here :-)
Dominik Röttsches (drott)
Comment 6 2012-12-13 09:30:20 PST
At least for enabling webaudio/oscillator-* test, we need bug 95084 to be closed.
Dominik Röttsches (drott)
Comment 7 2012-12-19 08:21:53 PST
Dominik Röttsches (drott)
Comment 8 2012-12-19 08:22:39 PST
Comment on attachment 180171 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=180171&action=review > Source/WebCore/platform/audio/gstreamer/WebKitWebAudioSourceGStreamer.cpp:22 > +#define GLIB_DISABLE_DEPRECATION_WARNINGS 1 Philippe, is this too brutal? Or is this okay, what do you think?
Philippe Normand
Comment 9 2012-12-19 09:59:20 PST
Comment on attachment 180171 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=180171&action=review >> Source/WebCore/platform/audio/gstreamer/WebKitWebAudioSourceGStreamer.cpp:22 >> +#define GLIB_DISABLE_DEPRECATION_WARNINGS 1 > > Philippe, is this too brutal? Or is this okay, what do you think? Can't you adapt your build options instead? If not please have this define only for your port. > Source/WebKit2/UIProcess/API/efl/EwkViewImpl.cpp:168 > + m_pageProxy->pageGroup()->preferences()->setWebAudioEnabled(true); As this spec is still experimental other ports (GTK, Qt) have a websetting for this.
Kenneth Rohde Christiansen
Comment 10 2012-12-20 01:32:15 PST
Comment on attachment 180171 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=180171&action=review >> Source/WebKit2/UIProcess/API/efl/EwkViewImpl.cpp:168 >> + m_pageProxy->pageGroup()->preferences()->setWebAudioEnabled(true); > > As this spec is still experimental other ports (GTK, Qt) have a websetting for this. We are semi-opposed to exposing unneeded settings for features as it is a bit of a can or worms and hard to maintain. It is default on Chrome and iOS, so I think this is fine.
Dominik Röttsches (drott)
Comment 11 2012-12-20 06:02:48 PST
Dominik Röttsches (drott)
Comment 12 2012-12-20 06:05:15 PST
(In reply to comment #9) > (From update of attachment 180171 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=180171&action=review > > >> Source/WebCore/platform/audio/gstreamer/WebKitWebAudioSourceGStreamer.cpp:22 > >> +#define GLIB_DISABLE_DEPRECATION_WARNINGS 1 > > > > Philippe, is this too brutal? Or is this okay, what do you think? > > Can't you adapt your build options instead? If not please have this define only for your port. Thanks, I should have thought about that. Yep, moved that into Source/WebCore/PlatformEfl.cmake.
Dominik Röttsches (drott)
Comment 13 2012-12-20 06:10:17 PST
Note You need to log in before you can comment on or make changes to this bug.