[EFL] MiniBrowser does not play Infinite Gangnam Style https://bugs.webkit.org/show_bug.cgi?id=103531

Reviewed by Kenneth Rohde Christiansen.

.:

WebAudio now switched to ON for EFL.

* Source/cmake/OptionsEfl.cmake:

Source/WebCore:

Specifying additional define to avoid deprecation warning.

No new tests, compile time change which doesn't affect behavior.

* PlatformEfl.cmake:

Source/WebKit2:

WebAudio preference now defaults to switched on.

* UIProcess/API/efl/EwkViewImpl.cpp:
(EwkViewImpl::EwkViewImpl):

Tools:

For EFL we would like this feature to be built by default.

* Scripts/webkitperl/FeatureList.pm:

LayoutTests:

Marked remaining webaudio failures.

* platform/efl/TestExpectations:

Canonical link: https://commits.webkit.org/123738@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138248 268f45cc-cd09-0410-ab3c-d52691b4dbfc